--- a/index.html
+++ b/index.html
@@ -16,61 +16,60 @@
 <body>
   <div class="container">
 
-    <div class="card">
-      <div class="img">
-        <img class="img--main" src="./images/illustration-woman-online-desktop.svg" alt="">
-        <img src="./images/bg-pattern-desktop.svg" alt="" class="img--bg-pattern">
-        <img class="img--box" src="./images/illustration-box-desktop.svg" alt="">
+    <div class="faq-card">
+      <div class="desktop-img">
+        <img src="./images/illustration-woman-online-desktop.svg" alt="">
       </div>
-      <div class="accordion">
+      <div class="list">
         <h1>FAQ</h1>
-        <ul>
-          <li class="active">
-            <div class="question">How many team members can I invite? <img src="./images/icon-arrow-down.svg" alt="">
-            </div>
-            <div class="answer">
-              You can invite up to 2 additional users on the Free plan. There is no limit on
-              team members for the Premium plan.
-            </div>
-          </li>
-          <li>
-            <div class="question">What is the maximum file upload size? <img src="./images/icon-arrow-down.svg" alt="">
-            </div>
-            <div class="answer">
-              No more than 2GB. All files in your account must fit your allotted storage space.
-            </div>
-          </li>
-          <li>
-            <div class="question">How do I reset my password? <img src="./images/icon-arrow-down.svg" alt=""> </div>
-            <div class="answer">Click “Forgot password” from the login page or “Change password” from your profile page.
-              A reset link will be emailed to you.</div>
-          </li>
-          <li>
-            <div class="question">Can I cancel my subscription? <img src="./images/icon-arrow-down.svg" alt=""> </div>
-            <div class="answer">Click “Forgot password” from the login page or “Change password” from your profile page.
-              A reset link will be emailed to you.</div>
-          </li>
-          <li>
-            <div class="question">Do you provide additional support? <img src="./images/icon-arrow-down.svg" alt="">
-            </div>
-            <div class="answer">Chat and email support is available 24/7. Phone lines are open during normal business
-              hours.</div>
-          </li>
-          <li>
-            <div class="question">Do you provide additional support? <img src="./images/icon-arrow-down.svg" alt="">
-            </div>
-            <div class="answer">Chat and email support is available 24/7. Phone lines are open during normal business
-              hours.</div>
-          </li>
-        </ul>
+        <div class="list-item active">
+          <div class="question">
+            <p>How many team members can I invite?</p>
+            <img src="./images/icon-arrow-down.svg" alt="">
+          </div>
+          <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on
+            team members for the Premium plan.</p>
+        </div>
+        <div class="list-item">
+          <div class="question">
+            <p>What is the maximum file upload size?</p>
+            <img src="./images/icon-arrow-down.svg" alt="">
+          </div>
+          <p class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        </div>
+        <div class="list-item">
+          <div class="question">
+            <p>How do I reset my password?</p>
+            <img src="./images/icon-arrow-down.svg" alt="">
+          </div>
+          <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</p>
+        </div>
+        <div class="list-item">
+          <div class="question">
+            <p>Can I cancel my subscription?</p>
+            <img src="./images/icon-arrow-down.svg" alt="">
+          </div>
+          <p class="answer">Yes! Send us a message and we’ll process your request no questions asked.</p>
+        </div>
+        <div class="list-item">
+          <div class="question">
+            <p>Do you provide additional support?</p>
+            <img src="./images/icon-arrow-down.svg" alt="">
+          </div>
+          <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.
+          </p>
+        </div>
       </div>
     </div>
+
   </div>
   <!-- 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  </div>
+   -->
   <script src="./main.js"></script>
 </body>
 
