--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="list">
         <h1>FAQ</h1>
-        <div class="list-item active">
+        <div class="list-item">
           <div class="question">
             <p>How many team members can I invite?</p>
             <img src="./images/icon-arrow-down.svg" alt="">
