--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="list">
         <h1>FAQ</h1>
-        <div class="list-item">
+        <div class="list-item active">
           <div class="question">
             <p>How many team members can I invite?</p>
             <img src="./images/icon-arrow-down.svg" alt="">
@@ -63,13 +63,13 @@
       </div>
     </div>
 
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by Gürkan Özer.
+    </div>
   </div>
-  <!-- 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-   -->
+
   <script src="./main.js"></script>
 </body>
 
